--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ https://templatemo.com/tm-578-first-portfolio
                             <p class="mb-0">
                                 <span class="copyright-text">Copyright © 2036 <a href="#">First Portfolio</a> Company. All rights reserved.</span>
                                 Design: 
-                                <a rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a>
+                                <a rel="sponsored" href="https://templatemo.com" target="_blank">Sekharkhanal</a>
                             </p>
                         </div>
                     </div>
